--- a/TeLoBusco/TeLoBusco/Views/Pedidos/Pedidos.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/Pedidos.cshtml
@@ -171,7 +171,7 @@
             function obtenerPedidos(lat, lng) {
                 $.get("/Pedidos/ObtenerPedidosCeranos?lat=" + lat + "&lng=" + lng + "&distancia=" + distancia, function (data) {
                     var obj = JSON.parse(data);
-                    console.log(obj);
+                    //console.log(obj);
                     posicionarPedidosMapa(obj);
                 });
             }
