Corrección editar pedido

--- a/TeLoBusco/TeLoBusco/Views/Pedidos/Edit.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/Edit.cshtml
@@ -41,7 +41,7 @@
                                     @Html.LabelFor(m => m.precioPedido, new { @class = "col-md-6 control-label" })
                                     <div class="col-md-10">
                                         @Html.TextBoxFor(m => m.precioPedido, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(m => Convert.ToDouble(m.precioPedido), "", new { @class = "text-danger" })
+                                        @Html.ValidationMessageFor(m => m.precioPedido, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
                             </div>
