--- a/TeLoBusco/TeLoBusco/Views/Postulaciones/Postulacion.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Postulaciones/Postulacion.cshtml
@@ -24,7 +24,25 @@
                             </div>
                             <div class="card-body">
                                 <div class="form-group">
-                                    <label><b>Delivery:</b> <a href="#">@Model.PostuladoNombreApellido</a></label><br /> <!-- usar IdPostulado para mostrar info del delivery-->
+                                    <label><b>Delivery:</b> <a class="btn btn-success" data-toggle="modal" data-target=".bootstrapmodal">@Model.PostuladoNombreApellido</a></label><br /> <!-- usar IdPostulado para mostrar info del delivery-->
+                                    <div class="modal fade bootstrapmodal">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    Asi esta Valorado @Model.PostuladoNombreApellido
+                                                    <button class="close" data-dismiss="modal"><span>&times;</span></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <label class="alert-primary">El promedio de todos sus servicios: @Model.ValoracionDelivery.ToString("N2")</label>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    Wappo Web
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div> 
+                                    
                                     <label><b>Tiempo estimado de transporte:</b> @Model.TiempoEstimado Min.</label><br />
                                     <label><b>Precio de transporte:</b> $@Math.Round(Model.Precio, 2)</label>
                                 </div>
