--- a/TeLoBusco/TeLoBusco/Views/Pedidos/_PedidosGrilla.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/_PedidosGrilla.cshtml
@@ -17,6 +17,7 @@
             <th>Estado</th>
             <th>Precio pedido</th>
             <th>Precio transporte</th>
+            <th></th>
         </tr>
     </thead>
     <tfoot>
@@ -28,6 +29,7 @@
             <th>Estado</th>
             <th>Precio pedido</th>
             <th>Precio transporte</th>
+            <th></th>
         </tr>
     </tfoot>
     <tbody>
@@ -59,6 +61,7 @@
             {
                 <td>No disponible</td>
             }
+            <th><a href="/Denuncias/Denuncia?id=@pedido.IdPedido">Denunciar</a></th>
         </tr>
         }
     </tbody>
