--- a/TeLoBusco/TeLoBusco/Views/Denuncias/Denuncia.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Denuncias/Denuncia.cshtml
@@ -1,24 +1,58 @@
-﻿
+﻿@model TeLoBusco.Models.DenunciasViewModel
 @{
     ViewBag.Title = "Denuncia";
 }
 
 <h2>Denuncia</h2>
+@*
+    <form>
+        <div class="form-group">
+            <label for="usuario">Usuario</label>
+            <input type="text" class="form-control" id="usuario" placeholder="Juan Perez">
+        </div>
+        <div class="form-group">
+            <label for="Descripcion">Descripcion pedido</label>
+            <input type="text" class="form-control" id="Descripcion" placeholder="Una milanga + 2 pizzas..">
+        </div>
 
-<form>
+        <div class="form-group">
+            <label for="motivo">Motivo de la denuncia:</label>
+            <textarea class="form-control" rows="3" id="motivo"></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-primary mb-2">Enviar</button>
+    </form>*@
+
+@using (Html.BeginForm("Denunciar", "Denuncias", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
+    @Html.AntiForgeryToken()
+    <hr />
+    @Html.ValidationSummary("", new { @class = "text-danger" })
+  
+    @Html.HiddenFor(m => m.IdPedido)
+     
     <div class="form-group">
-        <label for="usuario">Usuario</label>
-        <input type="text" class="form-control" id="usuario" placeholder="Juan Perez">
+        @Html.LabelFor(m => m.DescripcionPedido, new { @class = "col-md-2 control-label",})
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.DescripcionPedido, new { @class = "form-control" })
+        </div>
     </div>
     <div class="form-group">
-        <label for="Descripcion">Descripcion pedido</label>
-        <input type="text" class="form-control" id="Descripcion" placeholder="Una milanga + 2 pizzas..">
+        @Html.LabelFor(m => m.Motivo, new { @class = "col-md-4 control-label" })
+        <div class="col-md-10">
+            @Html.TextAreaFor(m => m.Motivo, new { @class = "form-control" })
+        </div>
     </div>
+
 
     <div class="form-group">
-        <label for="motivo">Motivo de la denuncia:</label>
-        <textarea class="form-control" rows="3" id="motivo"></textarea>
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" class="btn btn-default" value="Aceptar" />
+        </div>
     </div>
+}
 
-    <button type="submit" class="btn btn-primary mb-2">Enviar</button>
-</form>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
+
