--- a/TeLoBusco/TeLoBusco/Views/Home/Index.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Home/Index.cshtml
@@ -171,10 +171,10 @@
 
             actualizarNotificaciones();
             //Actualizar notificaciones cada 5 segundos
-            setInterval(function () {
-                $(".Notificacion").remove();
-                actualizarNotificaciones();
-            }, 5000);
+            //setInterval(function () {
+            //    $(".Notificacion").remove();
+            //    actualizarNotificaciones();
+            //}, 5000);
 
             /*Limpiar contador de notificaciones al hacerle clic*/
             $("#ViewNotifications").click(function () {
