--- a/TeLoBusco/TeLoBusco/Views/Pedidos/Postularse.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/Postularse.cshtml
@@ -145,9 +145,9 @@
                     </div>
                 </div>
 
-                @Html.HiddenFor(Model => Model.IdPedido)
-                @Html.HiddenFor(Model => Model.precioMinimo)
-                @Html.HiddenFor(Model => Model.precioMaximo)
+                @Html.HiddenFor(model => Model.IdPedido)
+                @Html.HiddenFor(model => Model.precioMinimo)
+                @Html.HiddenFor(model => Model.precioMaximo)
 
                 <br />
                 <!-- BOTÓN PUBLICAR PEDIDO -->
