Corrección postulaciones - notificación

--- a/TeLoBusco/TeLoBusco/Views/Postulaciones/Postulacion.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Postulaciones/Postulacion.cshtml
@@ -71,10 +71,10 @@
                     </div>
                 </div>
 
-                @Html.HiddenFor(Model => Model.IdPedido)
-                @Html.HiddenFor(Model => Model.precioMinimo)
-                @Html.HiddenFor(Model => Model.precioMaximo)
-                @Html.HiddenFor(Model => Model.IdPostulacion)
+                @Html.HiddenFor(model => Model.IdPedido)
+                @Html.HiddenFor(model => Model.precioMinimo)
+                @Html.HiddenFor(model => Model.precioMaximo)
+                @Html.HiddenFor(model => Model.IdPostulacion)
 
                 <br />
                 <!-- BOTÓN PUBLICAR PEDIDO -->
