--- a/TeLoBusco/TeLoBusco/Views/Home/Index.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Home/Index.cshtml
@@ -161,7 +161,7 @@
                         } else {
                             $(".Notificacion").remove();
                             $("#NotificationCounter").css('display', 'none');
-                            var $nuevaNotificacion = $('<a class="dropdown-item itemsPrincipal" href="#">No hay notificaciones nuevas</a>'),
+                            var $nuevaNotificacion = $('<a class="dropdown-item itemsPrincipal Notificacion" href="#">No hay notificaciones nuevas</a>'),
                                 nuevaNotificacion2 = document.createElement("a"),
                                 divPadre = document.getElementById("NotificationList");
                             $("#NotificationList").append($nuevaNotificacion, [nuevaNotificacion2, divPadre]);
