Corrección error de tipeo.
Update TeLoBusco/TeLoBusco/Views/Pedidos/PedidosAsignados.cshtml

* "Lo sentimos, no tiene pedidos asignados. Puede posularse haciendo click aquí."

--- a/TeLoBusco/TeLoBusco/Views/Pedidos/PedidosAsignados.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/PedidosAsignados.cshtml
@@ -31,7 +31,7 @@
 }
 else
 {
-    <h5>Lo sentimos, no tiene pedidos asignados. Puede posularse haciendo click <a href="/Pedidos/Pedidos">aquí</a>.</h5>
+    <h5>Lo sentimos, no tiene pedidos asignados. Puede postularse haciendo click <a href="/Pedidos/Pedidos">aquí</a>.</h5>
 }
 
 @section scripts {
