Decoradores en PedidosApiController
 * Se añaden los decoradores RoutePrefix y Route

--- a/TeLoBusco/TeLoBusco/Views/Pedidos/SeguimientoPedido.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/SeguimientoPedido.cshtml
@@ -17,6 +17,7 @@
         <div class="card-body">
             <div class="form-group">
                 <label><b>Delivery:</b> @Model.AspNetUsers1.NombreApellido</label><br />
+                <label><b>Estado del pedido:</b> @Model.Estados.Descripcion</label><br />
                 <label><b>Descripción pedido:</b> @Model.descripcion_pedido</label><br />
                 <label><b>Observaciones pedido:</b> @Model.observaciones_pedido</label><br />
                 <label><b>Dirección origen:</b> @Model.calle_origen @Model.nro_calle_origen, @Model.Localidades.Nombre</label><br />
